refactor: rename cli project from ksctl to kli
This commit updates all references of the project name from "ksctl" to "kli"
across the codebase, documentation, scripts, and configuration files. The
module path, binary names, import paths, and user-facing messages have been
updated accordingly. This change ensures consistency with the new project
branding and prepares the repository for future releases under the "kli"
name.

Signed-off-by: Dipankar Das <65275144+dipankardas011@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,7 +8,7 @@
 
 version: 2
 
-project_name: ksctl-kli
+project_name: kli
 
 before:
   hooks:
@@ -17,7 +17,7 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
-    binary: ksctl
+    binary: kli
     goos:
       - linux
       - darwin
@@ -25,10 +25,10 @@ builds:
       - amd64
       - arm64
     ldflags:
-      - -s -w -X "github.com/ksctl/cli/v2/pkg/config.BuildDate={{.Env.DATE}}"
-      - -s -w -X "github.com/ksctl/cli/v2/pkg/config.Version={{.Env.VERSION}}"
-      - -s -w -X "github.com/ksctl/cli/v2/pkg/config.KsctlCoreVer={{.Env.OCIVERSION}}"
-      - -s -w -X "github.com/ksctl/cli/v2/pkg/telemetry.clientIdentity={{.Env.CLI_IDENTITY}}"
+      - -s -w -X "github.com/ksctl/kli/v2/pkg/config.BuildDate={{.Env.DATE}}"
+      - -s -w -X "github.com/ksctl/kli/v2/pkg/config.Version={{.Env.VERSION}}"
+      - -s -w -X "github.com/ksctl/kli/v2/pkg/config.KsctlCoreVer={{.Env.OCIVERSION}}"
+      - -s -w -X "github.com/ksctl/kli/v2/pkg/telemetry.clientIdentity={{.Env.CLI_IDENTITY}}"
 
 signs:
   - cmd: cosign
