--- a/.github/workflows/sync-docs.yml
+++ b/.github/workflows/sync-docs.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: checkout docs repo
       run: |
-        git clone --branch dev https://github.com/ksctl/docs.git docs-repo
+        git clone --branch dev https://github.com/ksctl/kli-docs.git docs-repo
 
     - name: Set up Go
       uses: actions/setup-go@v5
